@@ -62,7 +62,7 @@ source "$APPSDIR/examples/udp/Kconfig"
 source "$APPSDIR/examples/discover/Kconfig"
 source "$APPSDIR/examples/uip/Kconfig"
 source "$APPSDIR/examples/usbserial/Kconfig"
-source "$APPSDIR/examples/usbstorage/Kconfig"
+source "$APPSDIR/examples/usbmsc/Kconfig"
 source "$APPSDIR/examples/usbterm/Kconfig"
 source "$APPSDIR/examples/watchdog/Kconfig"
 source "$APPSDIR/examples/wget/Kconfig"
