@@ -43,7 +43,7 @@ SUBDIRS += lcdrw mm modbus mount mtdpart nettest nrf24l01_term nsh null
 SUBDIRS += nx nxconsole nxffs nxflat nxhello nximage nxlines nxtext ostest 
 SUBDIRS += pashello pipe poll posix_spawn pwm qencoder relays rgmp romfs
 SUBDIRS += sendmail serloop slcd smart smart_test tcpecho telnetd thttpd tiff
-SUBDIRS += touchscreen udp uip usbserial usbstorage usbterm watchdog
+SUBDIRS += touchscreen udp uip usbserial usbmsc usbterm watchdog
 SUBDIRS += wget wgetjson xmlrpc
 
 # Sub-directories that might need context setup.  Directories may need
@@ -57,7 +57,7 @@ CNTXTDIRS += adc can cc3000 cdcacm composite cxxtest dhcpd discover flash_test
 CNTXTDIRS += ftpd hello helloxx json keypadtestmodbus lcdrw mtdpart nettest
 CNTXTDIRS += nx nxhello nximage nxlines nxtext nrf24l01_term ostest relays
 CNTXTDIRS += qencoder slcd smart_test tcpecho telnetd tiff touchscreen
-CNTXTDIRS += usbstorage usbterm watchdog wgetjson
+CNTXTDIRS += usbmsc usbterm watchdog wgetjson
 endif
 
 all: nothing
